--- a/core/src/main/flex/org/dukecon/itemrenderer/EventItemRenderer.mxml
+++ b/core/src/main/flex/org/dukecon/itemrenderer/EventItemRenderer.mxml
@@ -70,7 +70,7 @@
     <s:Image id="streamIcon" top="9" left="9" width="119" bottom="9"/>
 
     <s:HGroup top="8" left="150" right="18" bottom="8" verticalAlign="middle">
-        <s:Label id="titleLabel" styleName="talkListTitle"/>
+        <s:Label id="titleLabel" styleName="talkListTitle dark"/>
     </s:HGroup>
 
 </s:ItemRenderer>
