--- a/core/src/main/flex/org/dukecon/itemrenderer/StreamItemRenderer.mxml
+++ b/core/src/main/flex/org/dukecon/itemrenderer/StreamItemRenderer.mxml
@@ -69,7 +69,7 @@
     <s:Image source="{streamIcon}" top="8" left="8" width="120" bottom="8"/>
 
     <s:HGroup top="8" left="150" right="18" bottom="8" verticalAlign="middle">
-        <s:Label id="itemLabel" text="{streamName}" styleName="listTitle"/>
+        <s:Label id="itemLabel" text="{streamName}" styleName="listTitle dark"/>
     </s:HGroup>
 
 </s:ItemRenderer>
