- Updated the property used to retrieve the image from the ressource service.

--- a/core/src/main/flex/org/dukecon/views/SpeakerView.mxml
+++ b/core/src/main/flex/org/dukecon/views/SpeakerView.mxml
@@ -64,7 +64,7 @@
             }
 
             if(speaker && resourceService && eventService) {
-                speakerImage.source = resourceService.getIconForSpeaker(speaker.name);
+                speakerImage.source = resourceService.getIconForSpeaker(speaker.id);
                 talkList.dataProvider = eventService.getEventsForSpeaker(settingsService.selectedConferenceId, speaker);
                 speakerNameLabel.text = speaker.name;
                 speakerCompanyLabel.text = speaker.company;
